css/main.css
/* ... */
#toolbox label {
  min-width: 120px;
}
#toolbox li {
  margin-bottom: 4px;
}

.draft_background {
  position: absolute;
  color: #CCC;
  font-size: 150px;
  z-index: -1;
  top: 350px;
}

#draft_left {
  left: -180px;
  -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
       -o-transform: rotate(90deg);
          transform: rotate(90deg);
}

#draft_right {
  right: -150px;
  -webkit-transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
      -ms-transform: rotate(-90deg);
       -o-transform: rotate(-90deg);
          transform: rotate(-90deg);
}

.newSeason,
.seasonHeader,
.seasonHeaderInfo,
.seasonHeaderFake {
  background: #525252;
  color: #fff;
  border: solid 0 black;
  padding: 5px 10px;
  margin: 3px -10px;
  cursor: pointer;
  height: 18px;
  line-height: 21px;
  -webkit-border-radius: 10px; 
     -moz-border-radius: 10px; 
          border-radius: 10px;
}
.newSeason form{
    height: 0;
    overflow: hidden;
    -moz-transition-property: height;
    -moz-transition-duration: 0.5s;
    -o-transition-property: height;
    -o-transition-duration: 0.5s;
    -webkit-transition-property: height;
    -webkit-transition-duration: 0.5s;
    transition-property: height;
    transition-duration: 0.5s;
    margin-bottom: 0;
}
.newSeason:hover form,
.newSeason.inEdit form{
    height: 114px;
}

.seasonHeader.edit{
    background: #aaa;
    color: black;
}
.newSeason{
    cursor: default;
    margin-left: 0;
    margin-right: 0;
    width: 122px;
    height: auto;
  -webkit-border-radius: 0; 
     -moz-border-radius: 0; 
          border-radius: 0;
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
}

.seasonHeaderFake{
    cursor: default;
    margin-left: -10px;
    margin-right: -10px;
    width: 142px;
}

.seasonHeaderInfo,
.seasonHeaderFake{
    background-color: #333;
    cursor: default;
    text-align: center;
}

.seasonHeaderInfo img{
    margin-right: 2px;
    border-bottom: 2px solid;
}

.seasonHeaderInfo img.sxxexx{
    border-color: #faa732;
}
.seasonHeaderInfo img.absolute{
    border-color: #ff0000;
}
.seasonHeaderInfo img.full{
    border-color: #00ff00;
}
span.sxxexx{
    color: #faa732;
}
span.absolute{
    color: #ff0000;
}
span.full{
    color: #00ff00;
}


.newSeason label{
    min-width: 64px;
    float: left;
    padding-left: 2px;
}

div.seasonEdit{
    display: none;	
}
span.seasonEdit{
    float: right;	
}

li.episode{
    color: white;
    height: 18px;
    -moz-transition-property: margin-right, margin-left;
    -moz-transition-duration: 0.5s;
    -o-transition-property: margin-right, margin-left;
    -o-transition-duration: 0.5s;
    -webkit-transition-property: margin-right, margin-left;
    -webkit-transition-duration: 0.5s;
    transition-property: margin-right, margin-left;
    transition-duration: 0.5s;
    line-height: 18px;
    margin-bottom: 1px;
}

#overlay h3,
.entity h3{
    position: relative;
    font-size: 22px;
    height: 22px;
    text-align: center;
    margin-bottom: 12px;
    letter-spacing: 2px;
    text-shadow: -1px 0 black, 0 1px black,1px 0 black, 0 -1px black;
    cursor: move;
}
#overlay h3 span,
.entity h3 span{
    margin: 0 5px;
}
#overlay h3 .conInfo,
.entity h3 .conInfo{
    position: absolute;
    top: 5px;
    right: 0;
    display: none;
}

.entity h3:hover .conInfo{
    display: block;
}

.entity.edit.from li.episode.selected{
    margin-right: -14px;
}
.entity.edit.to li.episode.selected{
    margin-left: -14px;
}
.entity.edit.from li.episode.selected.full{
    -moz-transition-duration: 0.2s;
    -webkit-transition-duration: 0.2s;
    transition-duration: 0.2s;
    margin-right: -20px;
}
.entity.edit.to li.episode.selected.full {
  margin-left: -20px;
  -webkit-transition-duration: 0.2s;
     -moz-transition-duration: 0.2s;
          transition-duration: 0.2s;
}
li.episode:hover,
li.episode.hover {
    color: black;
    height: 16px;
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    margin-top: -1px;
    margin-bottom: 0;
    line-height: 16px;
}
li.episode:hover:last-child,
li.episode.hover:last-child {
  margin-bottom: -1px;
}

li.episode .absolute_number {
  display: block;
  float: left;
  font-size: 16px;
  margin-left: 15px;
}
li.episode .episode_number {
  display: block;
  float: right;
  margin-right: 15px;
  font-size: 16px;
}

.edit li.episode {
    cursor: pointer;
}


.entity {
  z-index: 1;
  padding: 0 0;
  margin: 0;
  border: 0;
}

.seasonConnection {
  position: relative;
  float: left;
  width: 44px;
  min-height: 300px;
  text-align: center;
  -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
         border-radius: 10px;
  -webkit-transition-property: all;
     -moz-transition-property: all;
       -o-transition-property: all;
          transition-property: all;
  -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
       -o-transition-duration: 0.5s;
          transition-duration: 0.5s;
}
.seasonConnection.edit {
    margin: 0 20px;
    background-color: #aaa;

}
.seasonConnection.edit.ready {
    /*background-color: #CFFFCB;*/
}
.seasonConnection.edit.wait {
  background: #F2F7A9 url("../images/background.png") repeat 5% 5%;
  -webkit-animation-name: conLoading;
  -webkit-animation-duration: 100s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
}
@-webkit-keyframes conLoading {
    from {
            background-position: 5% 5%
    }
    to {
            background-position: 1300% 600%
    }
}

.seasonConnection .connect {
  visibility: hidden;
}
.seasonConnection.edit .connect.active {
  visibility: visible;
}

.seasonConnection .clicker,
.seasonConnection .passthru {
  position: absolute;
  left: 0;
  display: none;
  width: 44px;
  height: 40px;
}
/* ... */

